# chord-detector-sys

./: .gitignore  Cargo.toml  build.rs
examples/: detect_chord.rs
lib/: .clang-tidy  CMakeLists.txt
lib/detector-lib/: CMakeLists.txt
lib/detector-lib/libs/kiss_fft130/: kiss_fft.c
lib/source/: bridge.cpp  bridge.h  lib.c  main.c
src/: lib.rs  raw.rs
